# build-your-own-ai

./: .env.example  .gitattributes  .gitignore  .kilocodemodes  AGENTS.md  IFLOW.md  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.iflow/: settings.json
.iflow/agents/: ai-engineer.md  architect-reviewer.md  code-reviewer.md  context-manager.md  data-analysis-agent.md  data-collection-agent.md  docs-architect.md  format-html-agent.md  frond-master.md  intelli-doc-writer.md  ml-engineer.md  mlops-engineer.md  perception-agent.md  prompt-engineer.md  python-pro.md  tutorial-engineer.md  ui-ux-designer.md
.kilocode/rules/: my_rules.md  project.md
.qoder/rules/: project.md  system.md
ai01/: pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
courseware/0-开营直播/: 笔记20250826.txt
courseware/02-DeepSeek使用与Prompt工程/: 1-情感分析-Deepseek-阿里代理.ipynb  1-情感分析-Deepseek-阿里代理.py  2-提示词工程使用.ipynb  2-提示词工程使用.py  3-deepseek-r1-7b使用.ipynb  4-model-download.ipynb
courseware/11-时间序列AI大赛/: 笔记20250928.txt
courseware/12-神经网络基础与Tensorflow实战/: 笔记20251004.txt
courseware/13-Pytorch与视觉检测/: 笔记20251008.txt
courseware/15-RAG技术与应用/: 笔记20251014.txt
courseware/17-Text2SQL：自助式数据报表开发/: 笔记20251021.txt
courseware/19-Function Calling与协作/: 笔记20251028.txt
courseware/2-DeepSeek使用与Prompt工程/: 1-情感分析-Deepseek-阿里代理.ipynb  2-提示词工程使用.ipynb  4-model-download.py
courseware/20-MCP与A2A的应用/: 笔记20251102.txt
courseware/22-视觉大模型与多模态理解/: pip-list.txt  笔记20251109.txt
courseware/23-Fine-tuning微调艺术/: 笔记20251111.txt
courseware/24-Fine-tuning实操/: Qwen2_5_(7B)_Alpaca-2.ipynb  Qwen2_5_(7B)_R1.ipynb  Qwen2_5_(7B)_R1.py  Qwen2_5_(7B)_医疗微调.ipynb  Qwen2_5_(7B)_模型调用.ipynb  qwen-vl-train.xlsx  qwen_vl_car_insurance_train.ipynb  qwen_vl_car_insurance_train.py  笔记20251116.txt
courseware/28-项目实战：AI搜索类应用/: 笔记20251130.txt
docs/: AI主义历史.md  IFlow 配置区别.md  iflow-agents-skills汇总.md
docs/homebrew/: 01-安装与配置.md  (+8 more)
experiment/2-DeepSeek使用与Prompt工程/: 2-提示词工程使用.py  3-deepseek-r1-7b使用.py  4-model-download.py  5-ollama使用.py  7-ollama-fastapi-python客户端.py  7-ollama-fastapi.py  pyproject.toml  test_import.py
notebook/: 作业-20260208.md  作业完成.md  应用设计方向.md  智能体应用方向.md  笔记-20260130.md
practice-py/: LangChain管道语法.ipynb  pyproject.toml  作用域与作用域链.ipynb
practice/08-CASE-二手车价格预测-P1/: .env.example  .gitignore  IFLOW.md  README.md  main.py  pyproject.toml
practice/08-CASE-二手车价格预测-P1/code/: __init__.py  data_analysis_tools.py  model_validation_tools.py  modeling_v23.py  modeling_v24_fast.py  modeling_v24_simplified.py  modeling_v26.py  modeling_v28.py  rf_modeling.py
practice/08-CASE-二手车价格预测-P1/data/: used_car_train_20200313.csv
practice/08-CASE-二手车价格预测-P1/docs/: 00-文档索引.md  01-项目概述.md  02-技术架构.md  03-使用指南.md  04-代码实现.md  05-测试和部署.md  数据集说明.md
practice/08-CASE-二手车价格预测-P1/feature/: modeling_v10_analysis.py  modeling_v1_analysis.py  modeling_v2_analysis.py  modeling_v3_analysis.py  modeling_v4_analysis.py  modeling_v5_analysis.py  modeling_v6_analysis.py  plot_learning_curve.py
practice/08-CASE-二手车价格预测-P1/model/: v23_cat_model.pkl  v23_lgb_model.pkl  v23_xgb_model.pkl  v26_cat_model.pkl  v26_xgb_model.pkl  v28_cat_model.pkl
practice/09-CASE-员工离职预测分析-P1/: pyproject.toml  requirements.txt
practice/09-CASE-员工离职预测分析-P1/docs/: 00-文档索引.md  01-项目概述.md  02-技术架构.md  03-使用指南.md  04-代码实现.md  05-测试和部署.md
practice/14-CASE-三国演义Embedding/: pyproject.toml
practice/14-CASE-三国演义Embedding/code/: test_environment.py  three_kingdoms.py  word2vec_demo.py
practice/14-CASE-三国演义Embedding/docs/: 00-文档索引.md  01-项目概述.md  02-技术架构.md  03-使用指南.md  04-代码实现.md  05-测试和部署.md  Word2Vec参数详解.md
practice/14-CASE-向量数据库与元数据管理/: .gitignore  pyproject.toml
practice/14-CASE-向量数据库与元数据管理/code/: ai_interview_qa_system.py  example.py
practice/14-CASE-向量数据库与元数据管理/docs/: 00-文档索引.md  01-项目概述.md  02-技术架构.md  04-代码实现.md  05-测试和部署.md
practice/14-CASE-向量数据库与元数据管理/model/: config.json  metadata.json  metadata.pkl
practice/14-CASE-向量数据库与元数据管理/model/chroma_db/: chroma.sqlite3
practice/14-CASE-向量数据库与元数据管理/output/: query_AI产品经理和传统产_results.json  query_什么是机器学习？_results.json
practice/15-CASE-创建RAG问答/: .env.example  pyproject.toml  test_rag.py  test_system.py
practice/15-CASE-创建RAG问答/code/: deepseek_integration.py  main.py  pdf_processor.py  rag.py  rag_example.py
practice/15-CASE-创建RAG问答/docs/: 00-文档索引.md  01-项目概述.md  02-技术架构.md  03-使用指南.md  04-代码实现.md  05-测试和部署.md  使用说明.md
practice/17-CASE-Text2SQL/: .env.example  README.md  pyproject.toml
practice/17-CASE-Text2SQL/code/: __init__.py  cli.py  prepare_data.py  text2sql_vanna.py
practice/17-CASE-Text2SQL/data/: heros.db
practice/17-CASE-Text2SQL/docs/: 00-文档索引.md  01-项目概述.md  02-技术架构.md  03-使用指南.md  04-代码实现.md  05-测试和部署.md  database_schema.md
practice/CASE-钢铁缺陷检测-P1/: IFLOW.md  README.md  pyproject.toml  run_training.sh  钢铁缺陷检测.ipynb
practice/CASE-钢铁缺陷检测-P1/code/: README.md
practice/CASE-钢铁缺陷检测-P1/data/yolo_format/: data.yaml
practice/CASE-钢铁缺陷检测-P1/data/yolo_format/labels/train/: 1.txt  100.txt  1000.txt  1003.txt  1006.txt  1009.txt  101.txt  1011.txt  1013.txt  1015.txt  1020.txt  1021.txt  1022.txt  1025.txt  1027.txt  1028.txt  103.txt  1033.txt  1034.txt  1035.txt  1036.txt  104.txt  1040.txt  1044.txt  1050.txt  1051.txt  1058.txt  106.txt  1061.txt  1062.txt  1065.txt  1072.txt  1073.txt  1076.txt  1077.txt  1078.txt  1081.txt  1085.txt  1090.txt  1091.txt  (+446 more)
practice/CASE-钢铁缺陷检测-P1/data/yolo_format/labels/val/: 1001.txt  1039.txt  1052.txt  107.txt  1088.txt  1089.txt  1095.txt  1110.txt  1114.txt  1115.txt  1116.txt  1120.txt  1124.txt  1131.txt  1132.txt  1142.txt  1163.txt  1166.txt  1170.txt  118.txt  1182.txt  1189.txt  119.txt  1190.txt  1191.txt  1193.txt  1201.txt  1204.txt  1205.txt  1206.txt  1251.txt  1265.txt  1281.txt  1286.txt  1300.txt  1318.txt  132.txt  1326.txt  1329.txt  1347.txt  (+75 more)
practice/CASE-钢铁缺陷检测-P1/docs/: YOLO模型训练建议.md
practice/CASE-钢铁缺陷检测-P1/runs/detect/steel_defect_yolo11n_20251221_021410/: class_distribution.csv
vector_db/: index.pkl  page_info.pkl
(+7079 files in other folders)
