[project]
name = "build-your-own-ai"
version = "0.1.0"
description = "build your own ai."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "cozepy>=0.19.0",
    "dashscope>=1.24.2",
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "modelscope>=1.29.1",
    "openai>=1.102.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "ydata-profiling>=4.6.0",
    "peft>=0.17.1",
    "plotly>=6.3.1",
    "prophet>=1.1.7",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.4.1,<1.14",
    "seaborn==0.12.2",
    "statsmodels>=0.13.2,<0.14",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.5",
    "mlxtend>=0.23.4",
    "bayesian-optimization>=2.0.2",
    "loguru>=0.7.3",
    "numpy>=1.24,<2.0",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.5",
    "catboost>=1.2.8",
    "langchain>=0.1.0,<0.2.0",
    "joblib>=1.5.2",
    "pandas-stubs>=2.3.2.250926",
    "tensorflow>=2.18.1",
    "pyqt5>=5.15.11",
    "lxml>=6.0.2",
    "nltk>=3.9.2",
    "faiss-cpu>=1.13.2",
    "jieba>=0.42.1",
    "gensim>=4.4.0",
    "flagembedding>=1.3.5",
    "pypdf2>=3.0.1",
]
[tool.uv.extra-build-dependencies]
    fbprophet = ["pystan"]
[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "uv>=0.9.0",
    "basedpyright>=1.32.1",
    "types-pillow>=10.2.0.20240822",
    "types-requests>=2.32.4.20250913",
    "types-python-dateutil>=2.9.0.20251008",
]
