[project]
name = "build-your-own-ai"
version = "0.1.0"
description = "AI 训练营"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.11",
    "dotenv>=0.9.9",
    "langchain>=1.2.9",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "pandas>=3.0.0",
    "prophet>=1.3.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = []
