[project]
name = "employee-attrition-prediction"
version = "0.1.0"
description = "员工离职预测分析项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.6",
    "seaborn==0.12.2",
    "scipy>=1.4.1,<1.14",
    "statsmodels>=0.13.2,<0.14",
    "ydata-profiling>=4.6.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"